socsob-1316 : fix word break on applications block

--- a/web/themes/custom/socomec/assets/scss/components/pages/_product_page.scss
+++ b/web/themes/custom/socomec/assets/scss/components/pages/_product_page.scss
@@ -509,13 +509,11 @@ body.node--type-product {
       }
 
       h2 {
-        color: $yellow;
+        @include S2($yellow);
         font-family: $font-roboto;
-        font-size: 32px;
         font-weight: 300;
         line-height: 40px;
         margin-bottom: 30px;
-        word-break: break-all;
       }
 
       ul {
